ola-parser/src/testdata/syntaxTests/natspec/docstring_empty_description.sol
contract C {
    /// @param id
    fn vote(u256 id)  {}
}
// ----
// DocstringParsingError 9942: (17-30): No description given for param id
